--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,19 @@
 [build-system]
-requires = [
-    'setuptools',
-    'wheel'
-]
+requires = ['setuptools', 'wheel']
 build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'mynews'
 version = '0.1.0'
-description = 'A Python Library for Your Daily News'
+description = 'A Python Library for easy acces to the NYT'
 authors = [{ name = 'Kevin Zhu', email = 'kzhu2099@gmail.com' }]
 license = { file = 'LICENSE' }
 readme = 'README.md'
 dependencies = [
-    'requests'
+    'feedparser',
+    'requests',
+    'pytz'
 ]
 
 [tool.setuptools]
-packages = ['mynews']
+packages = ['mynyt']
