--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,33 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'mynews'
-version = '0.1.0'
-description = 'A Python Library for easy acces to the NYT'
-authors = [{ name = 'Kevin Zhu', email = 'kzhu2099@gmail.com' }]
-license = { file = 'LICENSE' }
+
+version = '1.0.0'
+
+description = 'A library that accesses the publically availble RSS of NYT and converts it to an easy-to-digest daily summary.'
+
+authors = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
+
+classifiers = [
+    'Programming Language :: Python :: 3',
+    'Operating System :: OS Independent',
+    'License :: OSI Approved :: MIT License',
+]
+
 readme = 'README.md'
+
+requires-python = '>=3.8'
+
 dependencies = [
     'feedparser',
     'requests',
     'pytz'
 ]
 
+[project.urls]
+Homepage = 'https://github.com/kzhu2099/MyNYT'
+Issues = 'https://github.com/kzhu2099/MyNYT/issues'
+
 [tool.setuptools]
 packages = ['mynyt']
+license-files = []
