--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .venv/
+
 __pycache__/
 *.pyc
 *.pyo
@@ -7,4 +8,5 @@ build/
 dist/
 *.egg-info/
 
-.DS_Store
+.DS_Store  # macOS
+Thumbs.db  # Windows
