--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ build-backend = 'setuptools.build_meta'
 [project]
 name = 'mynyt'
 
-version = '1.1.1'
+version = '1.1.3'
 
 description = 'A library that accesses the publicly available RSS of NYT and converts it to an easy-to-digest daily summary.'
 
 authors = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
+maintainers = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
 
 classifiers = [
     'Programming Language :: Python :: 3',
