--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,29 @@ build-backend = 'setuptools.build_meta'
 [project]
 name = 'mynyt'
 
-version = '1.1.3'
+version = '1.1.4'
 
-description = 'A library that accesses the publicly available RSS of NYT and converts it to an easy-to-digest daily summary.'
+description = 'A library that accesses the publicly available RSS of the NYT and converts it to an easy-to-digest daily summary.'
 
 authors = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
 maintainers = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
 
 classifiers = [
-    'Programming Language :: Python :: 3',
-    'Operating System :: OS Independent',
+    'Development Status :: 4 - Beta',
+
+    'Intended Audience :: Developers',
+    'Intended Audience :: End Users/Desktop',
+
     'License :: OSI Approved :: MIT License',
+
+    'Natural Language :: English',
+
+    'Operating System :: OS Independent',
+
+    'Programming Language :: Python :: 3',
+
+    'Topic :: Communications :: Email',
+    'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary'
 ]
 
 readme = 'README.md'
