--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ build-backend = 'setuptools.build_meta'
 [project]
 name = 'mynyt'
 
-version = '1.1.8'
+version = '1.1.9'
 
-description = 'A library that accesses the publicly available RSS of the NYT and converts it to an easy-to-digest daily summary.'
+description = 'A library brings the New York Times to you.'
 
-authors = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
-maintainers = [{name = 'Kevin Zhu', email = 'kzhu2099@gmail.com'}]
+authors = [{name = 'Kevin Zhu'}, {email = 'kzhu2099@gmail.com'}]
+maintainers = [{name = 'Kevin Zhu'}, {email = 'kzhu2099@gmail.com'}]
 
 classifiers = [
     'Development Status :: 4 - Beta',
@@ -32,6 +32,8 @@ classifiers = [
 
 readme = 'README.md'
 
+license = {file = 'LICENSE'}
+
 requires-python = '>=3.9'
 
 dependencies = [
@@ -49,5 +51,4 @@ Issues = 'https://github.com/kzhu2099/My-NYT/issues'
 
 [tool.setuptools]
 packages = ['mynyt']
-include-package-data = true
 license-files = []
