--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = 'setuptools.build_meta'
 [project]
 name = 'mynyt'
 
-version = '1.4.3'
+version = '1.4.4'
 
 description = 'a library that brings the New York Times to you with rss feeds and emails'
 
@@ -47,6 +47,8 @@ dependencies = [
 Homepage = 'https://github.com/kzhu2099/My-NYT'
 Issues = 'https://github.com/kzhu2099/My-NYT/issues'
 
+[tool.setuptools.packages.find]
+include = ['mynyt', 'mynyt.*']
+
 [tool.setuptools]
-packages = ['mynyt']
 license-files = []
